--- a/distCloudSecurity/forgePostRequest.html
+++ b/distCloudSecurity/forgePostRequest.html
@@ -18,7 +18,7 @@
 
             fields += "<input type=’hidden’ name=’briefdescription’ value=’Boby is my Hero’>";
 
-            fields += "<input type=’hidden’ name=’accesslevel[briefdescription]’ value=’2’>"; ?
+            fields += "<input type=’hidden’ name=’accesslevel[briefdescription]’ value=’2’>";
 
             fields += "<input type=’hidden’ name=’guid’ value=’42’>";
 
